[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["sqlbind_t"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = ["E731", "E402"]

[tool.coverage.run]
source = ["sqlbind_t"]
omit = ["_typecheck.py"]

[tool.coverage.report]
fail_under = 100
